--- a/web.html
+++ b/web.html
@@ -8,26 +8,25 @@
     <link rel="stylesheet" href="./index.css"/>
   </head>
   <body>
-  <div id="topbar">
+  <div id="headingtab">
   <p id="logo">LAVA</p>
   <div>
-    <a class="menu-item" href="#">HOME</a>
-    <a class="menu-item" href="#">ABOUT</a>
-    <a class="menu-item" href="#">TESTIMONIALS</a>
-    <a class="menu-item" href="#">CONTACT US</a>
-  </div>
+   <a class="menu-items" href="#shiftleft">Home</a>
+    <a class="menu-items" href="#second-section">About</a>
+ <a class="menu-items" href="#">Test</a>
+ <a class="menu-items" href="#">Contact Us</a>
+    </div>
 </div>
-
-<div id="landing-section">
-  <h1 id="main-heading">
-    Simple App that we <br /><span id="txt-create">CREATE</span>
+<div id="shiftleft">
+<h1 id="main-heading">Simple App that we <span id="blo"><br />
+ CREATE</span>
   </h1>
-  <p id="para">
-    Lava <a class="hyperlink" href="#">HTML landing page</a> template is provided by <a class="hyperlink" href="#">TemplateMo</a>. <br />You can modify
-    and use it for your commercial websites for <br /> free of charge. This template
-    is last updated on 29 Oct 2019.
+<p id="para">Lava <a class="hyperlink" href="#">HTML landing page</a> template is provided by <a class="hyperlink" href="#">TemplateMo</br> </a>You can modify and use it for your commercial websites for </br>free of charge. This template is last updated on 29 Oct 2019.
   </p>
-  <button class="btn-primary">KNOW US BETTER</button>
+
+  <button class="butst">Know Us better 
+</button>
+  
 </div>
 
 <div id="second-section">
@@ -36,22 +35,23 @@
     <img src="https://lava-homepage.firebaseapp.com/assets/images/features-icon-1.png" alt="Trend Analysis" />
     <h3 class="feature-card-heading">Trend Analysis</h3>
     <p class="feature-card-desc">Curabitur pulvinar vel odio sed sagittis. Nam maximus ex diam, nec consectetur diam.</p>
-    <button class="btn-primary feature-card-btn">READ MORE</button>
+    <button class="butst feature-card-btn">READ MORE</button>
   </div>
   <div class="feature-card">
     <img src="https://lava-homepage.firebaseapp.com/assets/images/features-icon-2.png" alt="Site Optimization" />
     <h3 class="feature-card-heading">Site Optimization</h3>
     <p class="feature-card-desc">Curabitur pulvinar vel odio sed sagittis. Nam maximus ex diam, nec consectetur diam.</p>
-    <button class="btn-primary feature-card-btn">DISCOVER MORE</button>
+    <button class="butst feature-card-btn">DISCOVER MORE</button>
   </div>
   <div class="feature-card">
     <img src="https://lava-homepage.firebaseapp.com/assets/images/features-icon-3.png" alt="Trend Analysis" />
     <h3 class="feature-card-heading">Email Design</h3>
     <p class="feature-card-desc">Curabitur pulvinar vel odio sed sagittis. Nam maximus ex diam, nec consectetur diam.</p>
-    <button class="btn-primary feature-card-btn">MORE DETAIL</button>
+    <button class="butst feature-card-btn">MORE DETAIL</button>
   </div>
   </div>
 </div>
+
 <div id="third-section">
   <div id="feature-card-grid1">
     
@@ -81,6 +81,6 @@
     </div>
     
   </div>
-  </div> 
+  </div>  
   </body>
 </html>
